--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+@import "config/colors";
+@import "modules/flash";
 @import "font-awesome";
 @import "config/colors";
 @import "config/font-size";
@@ -6,4 +8,6 @@
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
 @import "modules/chat";
+@import "modules/user";
 @import "messages/messages.scss"
+
