--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
 @import "config/colors";
-@import "modules/flash";
 @import "font-awesome";
 @import "config/colors";
 @import "config/font-size";
@@ -7,7 +6,9 @@
 @import "mixins/mixin";
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
+@import "modules/flash";
 @import "modules/chat";
 @import "modules/user";
+@import "modules/group";
 @import "messages/messages.scss"
 
